--- a/docs/changes/4.4.2.md
+++ b/docs/changes/4.4.2.md
@@ -76,6 +76,7 @@ Release date: `20xx-xx-xx`
 - [NXDRIVE-2062](https://jira.nuxeo.com/browse/NXDRIVE-2062): Upgrade mac-drive-2 to 10.13.6 (High Sierra)
 - [NXDRIVE-2068](https://jira.nuxeo.com/browse/NXDRIVE-2068): Upgrade mac-drive-1 to 10.13.6 (High Sierra)
 - [NXDRIVE-2064](https://jira.nuxeo.com/browse/NXDRIVE-2064): Use GitHub Actions to run quality and unit tests
+- [NXDRIVE-2071](https://jira.nuxeo.com/browse/NXDRIVE-2071): Use GitHub Actions to run functional tests
 - [NXDRIVE-2104](https://jira.nuxeo.com/browse/NXDRIVE-2104): [GNU/Linux] Fix the docker image name to use for packaging
 
 ## Tests
